1.Switch lead search input text to brz portuguese | 2.Switch 'no leads found message' to brz portuguese | 3.Fix conflict resolution dialog buttons alignments | 4. (Navbar-related) Add user e-mail + Stylize Lead Manager's main button + Change admin modules's link buttons labels.

--- a/src/app/shared/ui/widgets/navigation-bar/navigation-bar.component.scss
+++ b/src/app/shared/ui/widgets/navigation-bar/navigation-bar.component.scss
@@ -10,3 +10,7 @@ span + span {
 span + span > a + a {
   margin-left: .3rem;
 }
+
+.my-1 {
+  margin: 1rem 0;
+}
